--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-j2ee.server.home=C:/Users/PC/Downloads/apache-tomcat-10.0.23-windows-x64/apache-tomcat-10.0.23
-j2ee.server.instance=tomcat90:home=C:\\Users\\PC\\Downloads\\apache-tomcat-10.0.23-windows-x64\\apache-tomcat-10.0.23
+deploy.ant.properties.file=C:\\Users\\Huenh\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+j2ee.server.domain=D:/apache-tomcat-10.1.13
+j2ee.server.instance=tomcat90:home=D:\\apache-tomcat-10.1.13:base=D:\\apache-tomcat-10.1.13
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Huenh\\AppData\\Roaming\\NetBeans\\13\\build.properties
